# learntales

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/helper/: env_helper.py  img_helper.py
app/services/: llm.py  storyteller.py  vision_model.py
assets/: story.html  story.txt
lit/: main.py
tests/: storyteller_test.py
